# meltano_tap_dashboard_reports

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_dashboard_reports/: client.py  period.py  query.py  streams.py  tap.py
